# remix-browser

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: auto-tag.yml  ci.yml  release.yml
fixtures/: basic.html  dynamic.html  form.html  js_menu.html  network.html  sliders.html
scripts/: ensure-built.sh  install.sh  test-symlink.sh
skills/browse/: SKILL.md
src/: lib.rs  main.rs  server.rs
src/browser/: launcher.rs  mod.rs  pool.rs  session.rs
src/interaction/: click.rs  keyboard.rs  mod.rs  scroll.rs  wait.rs
src/selectors/: css.rs  mod.rs  ref.rs  text.rs  xpath.rs
src/tools/: dom.rs  interaction.rs  javascript.rs  mod.rs  navigation.rs  network.rs  page.rs  screenshot.rs  script.rs  snapshot.rs
tests/: e2e-scenarios.md  integration_tests.rs
