[package]
name = "remix-browser"
version = "0.2.1"
edition = "2021"
description = "Blazing fast headless Chrome automation via CDP — no extension needed"

[dependencies]
# MCP Server
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }

# CDP / Browser
chromiumoxide = { version = "0.8", features = ["tokio-runtime"], default-features = false }

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# Image encoding
base64 = "0.22"

# Logging (stderr only — stdout is MCP transport!)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# CLI args
clap = { version = "4", features = ["derive"] }

# Utility
which = "7"
tempfile = "3"

# JavaScript engine
boa_engine = "0.21"

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2"
